log
Sat, Mar 22, 2025  9:37:29 PM: 
 exercises.c | 43 +++++++++++++++++++++++++++++++++++++++----
 1 file changed, 39 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
3f6cb15
Sat, Mar 22, 2025  9:37:47 PM: 
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
779f12f
Sat, Mar 22, 2025  9:40:28 PM: 
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
bfa8fd1
Sat, Mar 22, 2025  9:45:05 PM: 
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
65a6d74
Sat, Mar 22, 2025  9:46:14 PM: 
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
41e06b9
Sat, Mar 22, 2025  9:48:23 PM: 
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   52 |       pushback(l, num);
      |       ^~~~~~~~
      |       pushBack
exercises.c:52:16: error: 'l' undeclared (first use in this function)
   52 |       pushback(l, num);
      |                ^
exercises.c:52:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:93:12: error: 'actual' undeclared (first use in this function)
   93 |       if (*actual == elem)
      |            ^~~~~~
Compilation failed
376e2fd
Sat, Mar 22, 2025  9:50:38 PM: 
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   52 |       pushback(l, num);
      |       ^~~~~~~~
      |       pushBack
exercises.c:52:16: error: 'l' undeclared (first use in this function)
   52 |       pushback(l, num);
      |                ^
exercises.c:52:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:93:12: error: 'actual' undeclared (first use in this function)
   93 |       if (*actual == elem)
      |            ^~~~~~
Compilation failed
5224c89
Sat, Mar 22, 2025  9:52:55 PM: 
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   52 |       pushback(l, num);
      |       ^~~~~~~~
      |       pushBack
exercises.c:52:16: error: 'l' undeclared (first use in this function)
   52 |       pushback(l, num);
      |                ^
exercises.c:52:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:93:12: error: 'actual' undeclared (first use in this function)
   93 |       if (*actual == elem)
      |            ^~~~~~
Compilation failed
61394ad
Sat, Mar 22, 2025  9:54:08 PM: 
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Wimplicit-function-declaration]
   52 |       pushback(l, num);
      |       ^~~~~~~~
      |       pushBack
exercises.c:52:16: error: 'l' undeclared (first use in this function)
   52 |       pushback(l, num);
      |                ^
exercises.c:52:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:93:12: error: 'actual' undeclared (first use in this function)
   93 |       if (*actual == elem)
      |            ^~~~~~
Compilation failed
96f2fcf
Sat, Mar 22, 2025  9:57:43 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
7399861
Sat, Mar 22, 2025 10:10:12 PM: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:120:18: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  120 |       int elem = top(P1);
      |                  ^~~
exercises.c:121:17: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  121 |       push(aux, elem);
      |                 ^~~~
      |                 |
      |                 int
In file included from exercises.c:7:
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:127:18: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  127 |       int elem = top(aux);
      |                  ^~~
exercises.c:128:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  128 |       push(P1, elem);
      |                ^~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:129:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  129 |       push(P2, elem);
      |                ^~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
Compilation failed
0f4fd06
Sat, Mar 22, 2025 10:12:07 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:120:18: error: initialization of 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
  120 |       int elem = (int*)top(P1);
      |                  ^
exercises.c:121:17: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  121 |       push(aux, elem);
      |                 ^~~~
      |                 |
      |                 int
In file included from exercises.c:7:
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:127:18: error: initialization of 'int' from 'int *' makes integer from pointer without a cast [-Wint-conversion]
  127 |       int elem = (int*)top(aux);
      |                  ^
exercises.c:128:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  128 |       push(P1, elem);
      |                ^~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:129:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  129 |       push(P2, elem);
      |                ^~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
Compilation failed
d9c9fb6
Sat, Mar 22, 2025 10:15:41 PM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:121:19: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  121 |       int *elem = *ptr;
      |                   ^
exercises.c:129:19: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  129 |       int *elem = *ptr;
      |                   ^
Compilation failed
7cbaed3
Sat, Mar 22, 2025 10:18:21 PM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
cf6ba13
Sat, Mar 22, 2025 10:24:11 PM: 
 exercises.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
c79d58d
